--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="one">
       <h1 class="one">
         <span data-node-name="greeting">Hey</span>
-        <span data-node-name="name">Anchal Soni</span>
+        <span data-node-name="name">Preeti Singh</span>
       </h1>
       <p class="two" data-node-name="greetingText">I really like your name btw!</p>
     </div>
@@ -46,7 +46,7 @@
       </p>
     </div>
     <div class="six">
-      <img src="img/anchal.png" alt="" class="lydia-dp" data-node-name="imagePath">
+      <img src="img/preeti.jpg" alt="" class="lydia-dp" data-node-name="imagePath">
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
