--- a/index.html
+++ b/index.html
@@ -49,8 +49,13 @@
       <img src="img/preeti.jpg" alt="" class="lydia-dp" data-node-name="imagePath">
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
-        <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
-        <h5 data-node-name="wishText">May the js.prototypes always be with you! ;)</h5>
+        <h3 class="wish-hbd" data-node-name="wishHeading">🎉🌹 Happy Birthday, Preeti! 🌹🎉</h3>
+        <h5 data-node-name="wishText">
+          On your special day, I want to celebrate not just the beautiful soul you are but also how incredibly lucky I am to have you by my side. Your sweetness, honesty, love, and unwavering sense of responsibility inspire me every day.
+          
+          May your year ahead be as bright and joyful as your presence in my life. Here’s to creating endless memories together and building a future full of love and happiness. 💖
+          
+          Have an amazing day, my love! 🥰🎂✨;)</h5>
       </div>
     </div>
     <div class="seven">
