--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </p>
     </div>
     <div class="six">
-      <img src="img/preeti.jpg" alt="" class="lydia-dp" data-node-name="imagePath">
+      <img src="img/preeti.png" alt="" class="lydia-dp" data-node-name="imagePath">
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading">🎉🌹 Happy Birthday, Preeti! 🌹🎉</h3>
